force-app/main/default/objects/BillingAccountManagerSettings__c/BillingAccountManagerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Billing Account Manager Settings</label>
</CustomObject>