force-app/main/default/objects/BillingAccountManagerSettings__c/fields/ACHPaymentPageName__c.field-meta.xml
<CustomField>
    <fullName>ACHPaymentPageName__c</fullName>
    <label>ACH Payment Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>