force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowACH__c.field-meta.xml
<CustomField>
    <fullName>AllowACH__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow ACH</label>
    <type>Checkbox</type>
</CustomField>