force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowCC__c.field-meta.xml
<CustomField>
    <fullName>AllowCC__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow CC</label>
    <type>Checkbox</type>
</CustomField>