force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowCreatePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>AllowCreatePaymentMethod__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Create Payment Method</label>
    <type>Checkbox</type>
</CustomField>