force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowCreatePaymentMethodforPayment__c.field-meta.xml
<CustomField>
    <fullName>AllowCreatePaymentMethodforPayment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Create Payment Method for Payment</label>
    <type>Checkbox</type>
</CustomField>