force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowDefaultPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>AllowDefaultPaymentMethod__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Default Payment Method</label>
    <type>Checkbox</type>
</CustomField>