force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowDeletePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>AllowDeletePaymentMethod__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Delete Payment Method</label>
    <type>Checkbox</type>
</CustomField>