force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowEditPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>AllowEditPaymentMethod__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Edit Payment Method</label>
    <type>Checkbox</type>
</CustomField>