force-app/main/default/objects/BillingAccountManagerSettings__c/fields/AllowRefunds__c.field-meta.xml
<CustomField>
    <fullName>AllowRefunds__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Refunds</label>
    <type>Checkbox</type>
</CustomField>