force-app/main/default/objects/BillingAccountManagerSettings__c/fields/CCPaymentPageName__c.field-meta.xml
<CustomField>
    <fullName>CCPaymentPageName__c</fullName>
    <label>CC Payment Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>