force-app/main/default/objects/BillingAccountManagerSettings__c/fields/HasAdminPermissions__c.field-meta.xml
<CustomField>
    <fullName>HasAdminPermissions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Admin Permissions</label>
    <type>Checkbox</type>
</CustomField>