force-app/main/default/objects/BillingAccountManagerSettings__c/fields/ReturnToPage__c.field-meta.xml
<CustomField>
    <fullName>ReturnToPage__c</fullName>
    <defaultValue>&quot;Billing Account&quot;</defaultValue>
    <label>Return To Page</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>