force-app/main/default/objects/BillingAccountManagerSettings__c/fields/UseNewHPM__c.field-meta.xml
<CustomField>
    <fullName>UseNewHPM__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Use New HPM</label>
    <length>3</length>
    <type>Text</type>
</CustomField>