force-app/main/default/objects/BillingAccountManagerSettings__c/fields/ValidatePayments__c.field-meta.xml
<CustomField>
    <fullName>ValidatePayments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validate Payments</label>
    <type>Checkbox</type>
</CustomField>